--- a/front_end/CSS_URL_Shortener.css
+++ b/front_end/CSS_URL_Shortener.css
@@ -6,6 +6,7 @@ html, body {
 h1 {
   padding-bottom: 20px;
   position: relative;
+  color: white;
 }
 
 .center {
@@ -27,5 +28,5 @@ h1 {
 
 #table {
   padding: 20px 30px;
-  /*visibility:hidden;*/a
+  /*visibility:hidden;*/
 }
